[package]
name = "rust-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core
axum = { version = "0.8.4", features = ["ws"] }
dotenv = "0.15.0"
anyhow = "1.0.98"
# Json Serialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Asynchronous runtime
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
